Revert "ATO-2352: Enable token request signature verification using JWKS in production"